fix: spacing on last nav home item

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -49,6 +49,10 @@ main {
   letter-spacing: var(--medium--letter-spacing);
   margin: 0 0 1rem;
   text-transform: uppercase;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 // JS ONLY ANIMATION PROPERTIES FOR HOME PAGE
